test/corpus/operations.txt
===============
Infix operators
===============
as
1 + 1

2 - 2

3 * "4"

---

(source_file
  (identifier)
  (binary_operation
    (integer)
    (integer))
  (binary_operation
    (integer)
    (integer))
  (binary_operation
    (integer)
    (string
      (quoted_string))))

===================
Operator Precedence
===================

a + b * c
a + b / c
a * c + b
a &+ b + c
a * b &* c
a == b + c

---

(source_file
  (binary_operation
    (identifier)
    (binary_operation
      (identifier)
      (identifier)))
  (binary_operation
    (identifier)
    (binary_operation
      (identifier)
      (identifier)))
  (binary_operation
    (binary_operation
      (identifier)
      (identifier))
    (identifier))
  (binary_operation
    (binary_operation
      (identifier)
      (identifier))
    (identifier))
  (binary_operation
    (binary_operation
      (identifier)
      (identifier))
    (identifier))
  (binary_operation
    (identifier)
    (binary_operation
      (identifier)
      (identifier))))
